Revise meta tags and favicon in index.html
Updated meta tags for improved SEO and branding.

--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
     <title>RecruitLens – GitHub Recruiter Signal Engine</title>
 
     <meta
       name="description"
-      content="RecruitLens analyzes GitHub portfolios the way recruiters evaluate them — using multi-dimensional signal scoring, README intelligence, and hiring simulations."
+      content="RecruitLens analyzes GitHub portfolios the way recruiters evaluate them using multi-dimensional signal scoring, README intelligence, and recruiter simulation modes."
     />
 
     <meta name="author" content="RecruitLens" />
 
-    <!-- Open Graph -->
+    <!-- Open Graph (for LinkedIn, WhatsApp, etc.) -->
     <meta property="og:title" content="RecruitLens – GitHub Recruiter Signal Engine" />
     <meta
       property="og:description"
-      content="Signal-based GitHub portfolio analysis with recruiter simulation modes and career alignment insights."
+      content="Signal-based GitHub portfolio analysis with career alignment insights and recruiter simulation."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -29,7 +32,7 @@
       name="twitter:description"
       content="Analyze GitHub portfolios like a recruiter."
     />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
@@ -37,3 +40,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
