Update Twitter image meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       name="twitter:description"
       content="Analyze GitHub portfolios like a recruiter."
     />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
