--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/og-image.png" />
 
     <title>RecruitLens – GitHub Recruiter Signal Engine</title>
 
@@ -23,7 +23,7 @@
       content="Signal-based GitHub portfolio analysis with career alignment insights and recruiter simulation."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
