Update meta tags and favicon links in index.html

--- a/index.html
+++ b/index.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <!-- Favicon (Primary) -->
+    <link rel="icon" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
-    <title>RecruitLens – GitHub Recruiter Signal Engine</title>
+    <title>RecruitLens | GitHub Recruiter Signal Engine</title>
 
     <meta
       name="description"
-      content="RecruitLens analyzes GitHub portfolios the way recruiters evaluate them using multi-dimensional signal scoring, README intelligence, and recruiter simulation modes."
+      content="RecruitLens analyzes GitHub portfolios the way recruiters evaluate them — using multi-dimensional signal scoring, README intelligence, and hiring simulation modes."
     />
 
     <meta name="author" content="RecruitLens" />
+    <meta name="theme-color" content="#0f172a" />
 
-    <!-- Open Graph (for LinkedIn, WhatsApp, etc.) -->
-    <meta property="og:title" content="RecruitLens – GitHub Recruiter Signal Engine" />
+    <!-- Open Graph (LinkedIn, WhatsApp, etc.) -->
+    <meta property="og:title" content="RecruitLens | GitHub Recruiter Signal Engine" />
     <meta
       property="og:description"
-      content="Signal-based GitHub portfolio analysis with career alignment insights and recruiter simulation."
+      content="See your GitHub through a recruiter's lens. Signal-based portfolio intelligence with career alignment insights."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://recruit-lens.vercel.app/" />
+    <meta property="og:image" content="https://recruit-lens.vercel.app/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RecruitLens" />
     <meta
       name="twitter:description"
-      content="Analyze GitHub portfolios like a recruiter."
+      content="Build signal. Get hired."
     />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="https://recruit-lens.vercel.app/logo.png" />
   </head>
 
   <body>
